--- a/build.gradle
+++ b/build.gradle
@@ -17,12 +17,15 @@ plugins {
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
+    mavenCentral()
     jcenter()
 }
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     implementation 'com.google.guava:guava:27.0.1-jre'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile files('libs/TBA-APIv3-Java-Library-2.1.jar')
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
